apply plugin: 'java'

//apply plugin: 'checkstyle'
apply plugin: 'idea'

sourceCompatibility = 1.7
version = '1.0'

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
}

test {
    // enable TestNG support (default is JUnit)
    useTestNG()

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = true

    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'

    // listen to events in the test execution lifecycle
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }

    // listen to standard out and standard error of the test JVM(s)
    onOutput { descriptor, event ->
        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
    }
}

dependencies {
    compile(
            'org.apache.lucene:lucene-core:4.10.4',
            'org.apache.lucene:lucene-queryparser:4.10.4',
            'org.apache.lucene:lucene-analyzers-common:4.10.4',
            'com.huaban:jieba-analysis:1.0.0'

    )

    testCompile group: 'org.testng', name: 'testng', version: '6.1.1'
}
